save default settings (like lineStyle, alpha, ...) for tools in ConstructionDefaults
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@28073 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e